--- a/index.html
+++ b/index.html
@@ -4,9 +4,28 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Rock Paper Scissors</title>
+    <title>Game</title>
     <link rel="stylesheet" href="style.css" />
     <script src="script.js"></script>
   </head>
-  <body></body>
+  <body>
+    <div class="title">ROCK PAPER SCISSORS</div>
+    <h1 class="status">Choose your weapon wisely!</h1>
+    <h1 class="description">First to score 5 points wins the game</h1>
+    <div class="board">
+      <div class="player">
+        <p class="player-emoji">?</p>
+        <p class="player-score">Player: 0</p>
+      </div>
+      <div class="computer">
+        <p class="computer-emoji">?</p>
+        <p class="computer-score">Computer: 0</p>
+      </div>
+    </div>
+    <div class="emojis">
+      <div class="rock-emoji">✊</div>
+      <div class="paper-emoji">✋</div>
+      <div class="scissors-emoji">✌️</div>
+    </div>
+  </body>
 </html>
